# thesis_msc

./: .gitignore  requirements.txt
python_project/: HOW_TO_RUN_SIMULATION.txt  README.md  pyproject.toml
python_project/notebooks/: 01_data_exploration.ipynb  02_seasonal_blocks.ipynb  03_extremal_dependence.ipynb  04_simulation_design.ipynb  05_results_figures.ipynb  data_exploration.ipynb  run_data_audit.py  simulation.ipynb
python_project/outputs/: daily_maxima_audit_report.md  data_audit_report.md  seasonal_audit_report.md  simulation_report.md  simulation_study_report.md
python_project/outputs/tables/: audit_balanced_panels.csv  audit_daily_balanced_panels.csv  audit_daily_candidate_panels_wide.csv  audit_daily_station_season.csv  audit_station_coverage_pivot.csv  audit_station_year.csv  audit_years.csv  balanced_panels_resolved.csv  seasonal_block_maxima_summary.csv  seasonal_coverage.csv  sim_bandwidths.csv  sim_bias_rmse_theta.csv  sim_detection_summary.csv  sim_pair_distances.csv  (+9 more)
python_project/scripts/: 01_run_data_audit.py  02_run_seasonal_sample_audit.py  03_build_seasonal_extremes.py  03_run_simulation.py  04_estimate_pairwise_dependence.py  05_make_figures.py  _bootstrap_path.py  _validate.py  knmi_wind_extremes_thesis.py  run_simulation_study.py  simulation_brown_resnick.py
python_project/src/: bootstrap.py  br_simulation.py  config.py  data_loading.py  dependence_estimators.py  distance_smoothing.py  extremes.py  plotting.py  seasons.py  simulation.py  simulation_pipeline.py  spatial_utils.py  station_metadata.py  station_pairs.py
python_project/tests/: concatenate_all_data.py  conftest.py  playground.ipynb  test_bootstrap.py  test_br_curves.py  test_br_simulation_recovers_curves.py  test_estimators.py  test_reproducibility.py  test_smoothing.py
(+83 files in other folders)
