[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ThesisTemplatePythonProject"
version = "0.0.1"
description = "An example Python project for a thesis template"
license = {file = "LICENSE"}
readme = {file = "README.txt", content-type = "text/markdown"}
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "joblib",          # parallel Monte Carlo replications in the simulation study
    "pyarrow",         # parquet intermediates
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true  # Enable namespace packages (no __init__.py files required)

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.pylint]
max-line-length = 119
output-format = "colorized"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "fixme",
]
